--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ numpy==1.26.4
 pandas==1.4.3
 Pillow==9.5.0
 pyxlsb==1.0.10
-streamlit==1.21.0
+# streamlit==1.21.0
+streamlit==1.38.0
 XlsxWriter==3.1.0
 openpyxl==3.0.10
 scikit-image==0.19.3
